# rayo

./: .gitignore  Cargo.toml  README.md  output.txt  scene.json
models/: balls.json
scenes/: sideways-ball.json
src/: camera.rs  cli.rs  color.rs  gui.rs  intersection.rs  main.rs  material.rs  parsing.rs  ray.rs  texture.rs  vec.rs
src/intersection/: aab.rs  hitinfo.rs  mod.rs  scene.rs  sphere.rs
