[package]
name = "rayo"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.8.4" # random numbers
image = "0.23.14" # ez image writing
rayon = "1.5.1" # parallelization
indicatif = "0.16.2" # progres bar
clap = "2.33.3" # ez clis
regex = "1" # obvious
json = "0.12.4" # json parser
json_comments = "0.2.0" # Makes it easy to strip comments from jso  n
piston = "*"
piston_window = "*"